--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -5,7 +5,7 @@
     android:id="@+id/newsRootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".features.news.presentation.activity.MainActivity">
+    tools:context=".features.news.presentation.activity.NewsActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvArticles"
